--- a/admin/index.html.template
+++ b/admin/index.html.template
@@ -8,12 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 , maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title><%= htmlWebpackPlugin.options.title %> <%= htmlWebpackPlugin.options.version %></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
-    <link rel="stylesheet" type="text/css" href="defaults.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+    <link rel="stylesheet" type="text/css" href="/defaults.css" />
 
   </head>
   <body>
