--- a/client/index.html.template
+++ b/client/index.html.template
@@ -8,10 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 , maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>
-      <%= htmlWebpackPlugin.options.title %>
-      <%= htmlWebpackPlugin.options.version %>
-    </title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
