--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -91,8 +91,8 @@ server-template-server:
     API_BINDADDR: 0.0.0.0
     API_PORT: 3332
     JWT_SECRET: secret
-    ADMIN_PASSWORD: password
-    USER_PASSWORD: password
+    ADMIN_PASSWORD: painipaini
+    USER_PASSWORD: painipaini
     DATABASE_HOST: server-template-database
     DATABASE_ID: server_template_local
     DATABASE_DB: server_template_local
