--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -70,8 +70,8 @@ http {
 
             # Example: Enable basic auth on client so that credentials will
             # be asked from user before any api calls are made
-            auth_basic              “user”;
-            auth_basic_user_file    /etc/nginx/.htpasswd;
+            # auth_basic              “user”;
+            # auth_basic_user_file    /etc/nginx/.htpasswd;
 
             proxy_redirect off;
 
